# nsr_uganda

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.prod.yml  conftest.py  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  start-nsr-ug.sh  vitest.config.js  vitest.setup.js
.github/workflows/: ci.yml  deploy.yml
apps/admin_console/: admin_api_urls.py  api.py  approvals_api.py  apps.py  permissions.py  refdata_api.py  snapshots.py  test_api.py  test_approvals.py  test_refdata_choicelists.py  test_refdata_geography.py  test_workflow.py  tests.py  urls.py  views.py  workflow_api.py
apps/api_gateway/: apps.py
apps/chatbot/: admin.py  api.py  apps.py  chunking.py  conftest.py  embeddings.py  models.py  provider.py  retrieval.py  serializers.py  services.py  test_api.py  test_chunking.py  test_embeddings.py  test_provider.py  test_reindex.py  test_retrieval.py  test_services.py  tests.py  urls.py
apps/consent/: admin.py  api.py  apps.py  checks.py  dqa_hooks.py  models.py  services.py  tasks.py  test_integration.py  test_rules_and_tasks.py  tests.py  urls.py
apps/data_explorer/: __init__.py  admin.py  api.py  apps.py  catalogue.py  db_router.py  feature_flag.py  handoff.py  matview_models.py  metadata_loader.py  models.py  permissions.py  public_catalogue.py  query_builder.py  serializers.py  services.py  signals.py  suppressor.py  tasks.py  throttle.py  urls.py  validators.py
apps/data_management/: admin.py  api.py  apps.py  checks.py  choice_field_map.py  labels.py  matviews.py  models.py  serializer_labels.py  test_checks.py  test_choice_field_map.py  test_detail_entities.py  test_label_serialization.py  test_matviews.py  test_registry_api.py  tests.py  urls.py
apps/data_requests/: api.py  apps.py  builder_schema.py  bundles.py  models.py  services.py  storage.py  tasks.py  test_helpers.py  tests.py  urls.py
apps/ddup/: admin.py  api.py  apps.py  models.py  phone.py  services.py  similarity.py  tasks.py  tests.py  urls.py
apps/dqa/: admin.py  api.py  apps.py  backfill.py  engine.py  forms.py  household_evaluator.py  models.py  pipeline.py  services.py  signals.py  test_household_api.py  test_household_evaluator.py  test_intra_household_integration.py  test_intra_household_seed.py  test_pipeline.py  tests.py  urls.py
apps/grievance/: admin.py  api.py  apps.py  models.py  services.py  signals.py  tests.py  urls.py
apps/identity_verification/: api.py  apps.py  client.py  mock.py  models.py  queue.py  tasks.py  tests.py  urls.py
apps/ingestion_hub/: admin.py  admin_credentials.py  api.py  apps.py  connection_test.py  geo_backfill.py  models.py  permissions.py  services.py  tasks.py  test_connection_test.py  test_promote_detail_fanout.py  tests.py  urls.py
apps/intake/: admin.py  api.py  apps.py  geo.py  kobo_push.py  models.py  pii_lint.py  rule_pack_sync.py  services.py  tests.py  urls.py  xlsform_export.py
design/: NSR MIS Console.html  README.md  app.jsx  components.jsx  nsr-mis-admin-console.html  nsr-mis-consent-portal.html  nsr-mis-console.html  screens-home.jsx  styles.css  tweaks-panel.jsx
docs/: 01_solution_architecture.docx  03_backlog.xlsx  04_ui_design_brief.md  04_ui_design_brief_amendment_dataexp.md  05_requirements.docx  06_questionnaire.docx  07_framework.docx  08_sprint_plan.xlsx  CLAUDE.md  api_changelog.md  consent_management_design_prompt.md  consent_management_scope.md  dpia.md  threat_model.md
nsr_mis/: __init__.py  asgi.py  celery.py  email_settings.py  settings.py  urls.py  views.py  wsgi.py
scripts/: import_legacy_questionnaire.py  load_ubos_geography.py  seed_data_explorer.py  seed_dih_sources.py  seed_dqa_consent_rules.py  seed_dqa_intra_household_rules.py  seed_dqa_rules.py  seed_geo_from_stages.py  seed_kigezi_geo.py
tests/: test_email_settings.py
(+501 files in other folders)
