[project]
name = "nsr-mis"
version = "0.1.0"
description = "Uganda National Social Registry MIS — MGLSD"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }

dependencies = [
  "Django>=5.0,<6.0",
  "djangorestframework>=3.15",
  "psycopg[binary]>=3.1",
  "celery>=5.4",
  "redis>=5.0",
  "drf-spectacular>=0.27",
  "django-environ>=0.11",
  "python-ulid>=2.0",
  "gunicorn>=22.0",
  "openpyxl>=3.1",
  "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "pytest>=8.0",
  "pytest-django>=4.8",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "django-stubs>=5.0",
]

[tool.setuptools.packages.find]
include = ["nsr_mis*", "apps*"]

[tool.ruff]
target-version = "py312"
line-length = 119
src = ["apps", "nsr_mis"]
extend-exclude = ["**/migrations/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "DJ", "N"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "nsr_mis.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "-ra --strict-markers"
markers = [
  "postgres: requires PostgreSQL backend (audit-chain trigger, etc.) — auto-skipped on other vendors",
]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = true

[tool.django-stubs]
django_settings_module = "nsr_mis.settings"
