[project]
name = "nsr-mis"
version = "0.1.0"
description = "Uganda National Social Registry MIS — MGLSD"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }

dependencies = [
  "Django>=5.0,<6.0",
  "djangorestframework>=3.15",
  "psycopg[binary]>=3.1",
  "celery>=5.4",
  "redis>=5.0",
  "drf-spectacular>=0.27",
  "django-environ>=0.11",
  "python-ulid>=2.0",
  "gunicorn>=22.0",
  "whitenoise>=6.6",
  "openpyxl>=3.1",
  "cryptography>=42.0",
  # Outbound HTTP — connectors (Kobo today; NIRA + UBOS when their
  # APIs land) all share one client. Requests is mature + boring;
  # an async client would force a different DRF view layer.
  "requests>=2.32",
  # Chatbot Assistant (ADR-0021). `anthropic` for the Claude
  # Messages client; `sentence-transformers` for local 384-d
  # embeddings (all-MiniLM-L6-v2, no second API key). v1
  # retrieval is Python-side cosine over a JSONField; pgvector
  # graduates when the corpus exceeds the ADR-0021 threshold.
  "anthropic>=0.40",
  "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "pytest>=8.0",
  "pytest-django>=4.8",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "django-stubs>=5.0",
  # Mocks outbound `requests` calls in connector tests — see
  # apps/ingestion_hub/connectors/test_kobo.py.
  "responses>=0.25",
  "bandit>=1.7",
]

[tool.setuptools.packages.find]
include = ["nsr_mis*", "apps*"]

[tool.ruff]
target-version = "py312"
line-length = 119
src = ["apps", "nsr_mis"]
extend-exclude = ["**/migrations/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "DJ", "N"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "nsr_mis.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "-ra --strict-markers"
markers = [
  "postgres: requires PostgreSQL backend (audit-chain trigger, etc.) — auto-skipped on other vendors",
  "sqlite_only: pins behaviour that only manifests on sqlite (no-trigger fallback) — auto-skipped on PostgreSQL",
  "slow: tests that take more than ~1s — opt-in via -m slow",
  "risk_probe: ADR-0023 re-identification risk probe — opt-in CI gate, runs against the staging matview snapshot",
  "performance: NFR smoke tests (P95 latency / throughput); opt-in via -m performance",
]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = true

[tool.django-stubs]
django_settings_module = "nsr_mis.settings"
